--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@libphamton/api-client-x",
-  "version": "1.1.4",
+  "version": "1.1.6",
   "description": "connect to api tiwtter",
   "main": "lib/index.js",
   "scripts": {
@@ -22,7 +22,10 @@
   },
   "homepage": "https://github.com/libphamton/api-client-x#readme",
   "dependencies": {
+    "@libphamton/api-client-x": "^1.1.4",
     "@libphamton/chatfanpage": "^1.0.1",
+    "@libphamton/client-fb": "^1.0.9",
+    "@libphamton/fb-group": "^1.0.0",
     "@oraliepham/api-chat-fanpage-facebook": "^1.2.0",
     "@oraliepham/api-facebooknew": "^1.0.5",
     "api-chat-fanpage-facebook": "^1.2.0",
